--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -1,5 +1,37 @@
+.buttonBox {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+}
 .button {
   width: 100px;
   height: 30px;
   margin-right: 10px;
+  outline: none;
+  margin-bottom: 30px;
+}
+.buttonGood {
+  composes: button;
+}
+.buttonGood:focus,
+.buttonGood:hover {
+  background-color: rgb(248, 8, 48);
+  color: rgb(255, 255, 255);
+}
+.buttonNeutral {
+  composes: button;
+}
+.buttonNeutral:focus,
+.buttonNeutral:hover {
+  background-color: rgb(2, 156, 245);
+  color: rgb(0, 0, 0);
+}
+.buttonBad {
+  composes: button;
+}
+.buttonBad:focus,
+.buttonBad:hover {
+  background-color: rgb(77, 75, 75);
+  color: rgb(255, 187, 0);
 }
